--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <section id="about" class="section container reveal">
         <h2>Who Am I?</h2>
         <p>
-          My name is <strong>Daniel Rimmer</strong>. I’m self taught webdesigner, business owner, former manager of a branch of a multinational company from China, in Brazil. I also worked in sales of B2B business for around four years. Currently I own a tie shop in Jerusalem called <strong>Rimmer’s</strong> — where I sell handmade silk ties from Italy. And I built my entire website by myself. You can visit it to see what’s possible: <a href="https://www.rimmers.shop" target="_blank" rel="noopener">www.rimmers.shop</a>. If I could do it — without a computer degree — so can you.
+          My name is <strong>Daniel Rimmer</strong>. I’m self taught webdesigner, front-end developer, business owner, former manager of a branch of a multinational company from China, in Brazil. I also worked in sales of B2B business for around four years. Currently I own a tie shop in Jerusalem called <strong>Rimmer’s</strong> — where I sell handmade silk ties from Italy. And I built my entire website by myself. You can visit it to see what’s possible: <a href="https://www.rimmers.shop" target="_blank" rel="noopener">www.rimmers.shop</a>. If I could do it — without a computer degree — so can you.
         </p>
         <p>
           This program is for anyone who wants to grow his parnassah (livelihood) without wasting years or unnecessary money. It’s for photographers, craftsmen, teachers, tutors, small business owners — anyone who wants to take control of his business online.
@@ -365,8 +365,8 @@
         // Helper: type text into an element with punctuation pauses
         const hardPunct = new Set(['.', '!', '?', '…', '—']);
         const softPunct = new Set([',', ';', ':']);
-        const baseDelay = 42; // 30% faster than original
-        const extraPunctDelay = 175;
+        const baseDelay = 29; // ~30% faster than current (was 42)
+        const extraPunctDelay = 123; // scaled ~30% faster (was 175)
 
         const typeInto = (el, fullText) => new Promise((resolve) => {
           // Reserve height to avoid layout jump
